<?xml version="1.0"?>
<resources>

    <string name="app_name">ShareCar</string>
    <string name="signUp">Sign up</string>
    <string name="haveAccount">Already have an account</string>
    <string name="login">Login</string>
    <string name="need_an_account">Need an account?</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_driver_maps">Map</string>
    <string name="car_brand">Car brand</string>
    <string name="car_model">Car model</string>
    <string name="max_passenger_it_can_take">Max passenger it can take</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="i_am_a_driver">I am a driver</string>
    <string name="i_am_a_customer">I am a customer</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="start_city">Start city</string>
    <string name="destination">Destination</string>
    <string name="seach_by_city">Seach by city</string>
    <string name="completed_trips">Completed Trips</string>
    <string name="trips">Trips</string>
    <string name="people">People</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="update_password">Update password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="current_password">Current password</string>

</resources>