<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_trips">

    <fragment
        android:id="@+id/nav_trips"
        android:name="com.example.sharecar.ui.trips.TripsFragment"
        android:label="@string/trips"
        tools:layout="@layout/fragment_trips" />

    <fragment
        android:id="@+id/nav_completed_trips"
        android:name="com.example.sharecar.ui.completedtrips.CompletedTripsFragment"
        android:label="@string/completed_trips"
        tools:layout="@layout/fragment_completed_trips" />

    <fragment
        android:id="@+id/nav_people"
        android:name="com.example.sharecar.ui.people.PeopleFragment"
        android:label="@string/people"
        tools:layout="@layout/fragment_people" />
</navigation>